# OpenCLTest

./: .gitignore  CMakeLists.txt
Source/: GPUContext.cpp  GPUContext.h  Main.cpp  VoxelArray.cpp  VoxelArray.h
Source/Kernels/: Kernel.cl
Tools/: Build.sh  Run.sh  Setup.sh
